Queue table finished.

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -4,8 +4,8 @@
       <button class="button-neumorphism" *ngIf="editField">Save</button>
     </div>
     <div class="iconbutton-neumorphism" matTooltip="Edit fields" matTooltipPosition="above" (click)="editFields()">
-      <i class="bi bi-pencil-square i-neumorphism" *ngIf="!editField"></i>
-      <i class="bi bi-x-circle-fill i-neumorphism" *ngIf="editField"></i>
+      <i class="bi bi-pencil-square " *ngIf="!editField"></i>
+      <i class="bi bi-x-circle-fill " *ngIf="editField"></i>
     </div>
   </div> 
   <div class="form-row data-form" spellcheck="true">
