--- a/src/app/components/table/table.component.css
+++ b/src/app/components/table/table.component.css
@@ -28,7 +28,6 @@
     border: none;
 }
 
-
 ::ng-deep.p-datatable .p-datatable-header {
     background-color: #e6e7ee;
     border: none;
@@ -153,7 +152,6 @@
 p-paginator-icon {
     box-shadow: none;
     font-size: 1.5rem;
-
 }
 
 ::ng-deep.p-disabled {
@@ -205,6 +203,189 @@ form {
     border: 0.10rem solid #d1d9e6;
     padding: 1.5rem;
     min-width: 28rem;
-    max-width: 77%;
+    max-width: 63%;
     margin-top: 2rem;
-  }
+}
+
+.inRow {
+    background: none;
+    overflow-y: hidden;
+    border-radius: 0;
+    border: none;
+    padding: 1rem;
+    min-width: unset;
+    max-width: unset;
+    margin-top: 0;
+}
+
+.form-group {
+    margin-bottom: 0
+}
+
+.col-xl-auto ::ng-deep .mat-form-field-wrapper {
+    padding-bottom: 0;
+}
+
+.col-xl-auto ::ng-deep .mat-form-field-appearance-standard .mat-form-field-flex {
+    padding-top: 0
+}
+
+.col-xl-auto ::ng-deep .p-checkbox-label {
+    line-height: 1;
+}
+
+.col-xl-auto ::ng-deep .p-checkbox-label {
+    margin-bottom: 0 !important;
+    color: #44476a;
+}
+
+.col-xl-auto ::ng-deep .p-checkbox {
+    padding: 1rem 0rem 1rem 1rem;
+}
+
+.col-xl-auto ::ng-deep.mat-form-field-appearance-standard .mat-form-field-flex {
+    padding: 0 !important;
+}
+
+.col-xl-auto ::ng-deep.mat-form-field-appearance-standard .mat-form-field-wrapper {
+    padding: 0 !important;
+}
+
+.col-xl-auto ::ng-deep .mat-form-field-infix {
+    border-top: none;
+}
+
+.col-xl-auto ::ng-deep.mat-form-field {
+    width: 100%;
+}
+
+.form-row>.col,
+.form-row>[class*="col-"] {
+    padding-right: 3rem;
+    padding-left: 1.5rem;
+    padding-bottom: 0.44rem;
+}
+
+.col-xl-auto ::ng-deep .mat-input-element {
+    height: 1.5rem;
+}
+
+.col-xl-auto ::ng-deep .mat-form-field-empty.mat-form-field-label {
+    top: 2.2rem !important;
+    left: 1.2rem !important;
+}
+
+.col-xl-auto ::ng-deep .mat-form-field-label:not(.mat-form-field-empty) {
+    top: 32px !important;
+    left: 17px !important;
+}
+
+.col-xl-auto ::ng-deep .mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label {
+    transform: translateY(-1.7em) scale(0.75) !important;
+}
+
+::ng-deep .p-column-filter-menu-button:focus {
+    background-color: #e6e7ee;
+    box-shadow: inset 2px 2px 5px #b8b9be;
+    border: 0.10rem solid #d1d9e6;
+    padding: .55rem;
+    color: #44476a;
+}
+
+::ng-deep.p-column-filter-overlay {
+    background-color: #e6e7ee;
+    box-shadow: inset 2px 2px 5px #b8b9be;
+    border: 0.10rem solid #d1d9e6;
+    padding: .55rem;
+    color: #44476a;
+    border-radius: 1rem;
+}
+
+::ng-deep.p-column-filter-overlay-menu .p-column-filter-operator {
+    padding: 0;
+    border-radius: .55em;
+    border: none;
+    background-color: transparent;
+    transition: all .3s ease-in-out;
+    overflow-wrap: break-word;
+    box-shadow: none;
+}
+
+::ng-deep.p-dropdown .p-dropdown-label.p-inputtext {
+    font-weight: 600;
+    font-size: 1rem;
+    color: #44476a !important;
+}
+
+::ng-deep p-columnfilterformelement .p-inputtext {
+    padding: .6rem .75rem;
+    color: #44476a;
+    background-color: #e6e7ee;
+    border: .0625rem solid #d1d9e6;
+    transition: all .3s ease-in-out;
+    border-radius: 0.99rem;
+    box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+    overflow-wrap: break-word;
+    -webkit-appearance: none;
+    width: 100%;
+}
+
+::ng-deep p-columnfilterformelement .p-inputtext:enabled:focus {
+    outline: 0;
+    border: .0625rem solid #d1d9e6;
+
+    box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+}
+
+::ng-deep p-columnfilterformelement p-button:enabled:hover {
+    background-color: rgba(38, 40, 51, 0.03) !important;
+    color: #44476a !important;
+    border-color: #d1d9e6 !important;
+}
+
+::ng-deep p-columnfilterformelement .p-inputtext:enabled:hover {
+    outline: 0;
+    box-shadow: none;
+    border-color: #d1d9e6 !important;
+}
+
+::ng-deep.p-button {
+    background-color: #e6e7ee;
+    color: #44476a !important;
+    border-color: #d1d9e6 !important;
+}
+
+::ng-deep .p-button.p-button-danger.p-button-text:enabled:hover {
+    color: #44476a !important;
+    border-color: #d1d9e6 !important;
+    outline: 0;
+    animation: pulse 3s infinite;
+    background-color: rgba(38, 40, 51, 0.03);
+}
+
+::ng-deep .p-button.p-button-outlined:enabled:hover {
+    background-color: rgba(38, 40, 51, 0.03);
+    color: #44476a !important;
+    border: .0625rem solid;
+}
+
+.table-container {
+    min-width: 1115px;
+    overflow-x: auto;
+}
+
+::ng-deep .p-column-filter-menu-button.p-column-filter-menu-button-active {
+    color: #44476a !important;
+    border-color: #d1d9e6 !important;
+    outline: 0;
+    animation: pulse 3s infinite;
+    background-color: rgba(38, 40, 51, 0.03);
+}
+
+::ng-deep .p-column-filter-menu-button.p-column-filter-menu-button-active,
+::ng-deep .p-column-filter-menu-button.p-column-filter-menu-button-active:hover {
+    background-color: #e6e7ee;
+    border: .0625rem solid #d1d9e6;
+    box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+    color: #44476a !important;
+}
