--- a/src/app/css/neumorphism.component.css
+++ b/src/app/css/neumorphism.component.css
@@ -46,9 +46,12 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  padding-left: 0.75rem;
+  padding-top: 0.5rem !important;
 }
 
 .iconbutton-neumorphism {
+  color: #44476a !important;
   background-color: #e6e7ee;
   padding-top: 0.5rem;
   padding-bottom: 0.2rem;
@@ -68,6 +71,7 @@
 }
 
 .iconbutton-neumorphism-disabled {
+  color: #d1d9e6 !important;
   background-color: #e6e7ee;
   padding-top: 0.5rem;
   padding-bottom: 0.2rem;
@@ -78,14 +82,13 @@
   border: .0625rem solid #d1d9e6;
 }
 
+.iconbutton-neumorphism-disabled .pi{
+  color: #d1d9e6 !important;
+} 
+
 .iconbutton-neumorphism-disabled:hover,
 .iconbutton-neumorphism-disabled:focus {
   outline: 0;
-}
-
-.iconbutton-container .i-neumorphism{
-  padding-left: 0.75rem;
-  padding-top: 0.5rem !important;
 }
 
 .mini-iconbutton-neumorphism {
@@ -108,12 +111,8 @@
   background-color: rgba(38, 40, 51, 0.03);
 }
 
-.i-neumorphism {
-  color: #31344b;
-}
-
-.i-neumorphism-disabled {
-  color: #d1d9e6;
+.i-colored{
+  color: #44476a !important;
 }
 
 .button-neumorphism {
@@ -135,6 +134,13 @@
   box-shadow: inset 2px 2px 5px #b8b9be;
   animation: pulse 3s infinite;
   outline: none;
+}
+
+.button-neumorphism-active{
+  color: #44476a;
+  background-color: #e6e7ee;
+  border: .0625rem solid #d1d9e6;
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
 }
 
 .button-neumorphism-disabled {
