--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,7 +1,7 @@
 <div class="table-container">
     <div class="margin-bt menu-table-container">
         <button class="iconbutton-neumorphism-disabled">
-            <i class="bi bi-sliders i-colored"></i>
+            <i class="bi bi-menu-button-fill i-colored"></i>
         </button>
         <ng-container>
             <button class="button-neumorphism margin-lt" (click)="toggleAddNewRecord()">
