--- a/src/app/components/form/form.component.css
+++ b/src/app/components/form/form.component.css
@@ -1,3 +1,56 @@
-.iconbutton-neumorphism i{
-    padding-left: 0.7rem;
+.iconbutton-neumorphism.btnEditLayout{
+
+  border-radius: .55rem;
+  position: relative !important;
+  top: 0.7rem;
+}
+
+.input-neumorphism{
+  width: 90% !important;
+  height: 1.5rem;
+}
+
+::ng-deep.mat-form-field {
+  display: inline-block !important;
+  position: unset !important;
+  width: 100% !important;
+
+}
+
+::ng-deep.mat-input-element {
+  box-sizing: border-box; 
+}
+
+::ng-deep.mat-form-field-wrapper {
+  padding-bottom: 0;
+}
+
+::ng-deep .form-row .mat-form-field-label {
+  top: 2.1rem !important;
+}
+
+::ng-deep .cdk-overlay-pane {
+  transform: translateX(-6px) translateY(0px) !important;
+}
+
+::ng-deep .mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label {
+  transform: translateY(-2em) scale(1) ;
+}
+
+::ng-deep .mat-form-field-appearance-fill{
+  margin-left: 0 !important;
+  margin-top: 2rem;
+}
+
+::ng-deep .mat-form-field-flex{
+  width: 100% !important;
+}
+
+::ng-deep .mat-form-field-appearance-fill .mat-form-field-label-wrapper {
+  top: -1.84375em !important;
+  padding-top: 1.84375em !important;
+}
+
+::ng-deep .mat-form-field-type-mat-select .mat-form-field-label {
+  width: calc(100% - 3rem) !important;
 }
