--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,31 +1,241 @@
-<form>
-  <div class="iconbutton-container">
-    <div class="btnsave-container margin-rt">
-      <button class="button-neumorphism" *ngIf="editField">Save</button>
+<button class="button-neumorphism" (click)="toggleEditLayout()">
+  Edit layout
+</button>
+<button class="button-neumorphism margin-lt" (click)="createNewField()">
+  Create new field
+</button>
+<button
+  class="iconbutton-neumorphism"
+  matTooltip="Edit fields"
+  matTooltipPosition="above"
+  (click)="cancelCreateNewField()"
+  *ngIf="creating"
+>
+  <i class="bi bi-x-circle-fill"></i>
+</button>
+<div spellcheck="true">
+  <form [formGroup]="callDataForm" *ngIf="callDataForm" novalidate>
+    <div class="iconbutton-container">
+      <div class="btnsave-container margin-rt">
+        <button
+          [disabled]="!callDataForm.valid"
+          [ngClass]="
+            !callDataForm.valid
+              ? 'button-neumorphism-disabled'
+              : 'button-neumorphism'
+          "
+          *ngIf="editField"
+        >
+          Save
+        </button>
+      </div>
+      <button
+        class="iconbutton-neumorphism"
+        matTooltip="Edit fields"
+        matTooltipPosition="above"
+        (click)="editFields()"
+        *ngIf="!editField"
+      >
+        <i class="bi bi-pencil-square"></i>
+      </button>
+      <button
+        class="iconbutton-neumorphism"
+        matTooltip="Edit fields"
+        matTooltipPosition="above"
+        (click)="cancelEditFields()"
+        *ngIf="editField"
+      >
+        <i class="bi bi-x-circle-fill"></i>
+      </button>
     </div>
-    <div class="iconbutton-neumorphism" matTooltip="Edit fields" matTooltipPosition="above" (click)="editFields()">
-      <i class="bi bi-pencil-square " *ngIf="!editField"></i>
-      <i class="bi bi-x-circle-fill " *ngIf="editField"></i>
-    </div>
-  </div> 
-  <div class="form-row data-form" spellcheck="true">
-    <div class="form-group col-md-6" *ngFor="let element of formElement">
-      <label>{{ element.element_placeholder }}</label>
 
-      <ng-container [ngTemplateOutlet]="element.element == 'input' ? inputElement : textareaElement"
-        [ngTemplateOutletContext]="{input:element}">
-      </ng-container>
+    <div class="form-row">
+      <div *ngIf="creating" class="form-check form-check-inline col-md-6">
+        <mat-label>New field</mat-label>
+        <mat-form-field appearance="standard">
+          <input
+            matInput
+            class="input-neumorphism"
+            type="text"
+            placeholder="New field"
+            autocomplete="off"
+            formControlName="newField"
+          />
+        </mat-form-field>
+      </div>
 
-      <ng-template #inputElement>
-        <input type="{{ element.element_type }}" class="input-neumorphism" [ngClass]="{ 'input-disabled-neumorphism ': !editField }" [readonly]="!editField" placeholder="{{ element.element_placeholder }}" value="{{ element.element_value }}" >
-      </ng-template>
+      <div
+        class="col-md-6"
+        *ngFor="let callData of formElement; let callDataIndex = index"
+      >
+        <div
+          class="form-check form-check-inline button-inline width-100"
+          *ngIf="!creating"
+        >
+          <ng-container
+            [ngSwitch]="
+              callData.element_type === 'boolean'
+                ? 1
+                : callData.element_type === 'address'
+                ? 2
+                : -1
+            "
+          >
+            <ng-container *ngSwitchCase="1">
+              <p-checkbox
+                [binary]="true"
+                label="{{ callData.element_placeholder }}"
+                inputId="{{ callDataIndex }}"
+                value="{{ callData.element_value }}"
+                formControlName="{{ callData.element_placeholder }}"
+              ></p-checkbox>
+            </ng-container>
+            <ng-container *ngSwitchCase="2">
+              <div *ngIf="!editField">
+                <mat-form-field appearance="standard">
+                  <mat-label>{{ callData.element_placeholder }}</mat-label>
+                  <input
+                    matInput
+                    class="input-neumorphism"
+                    [ngClass]="{ 'input-disabled-neumorphism ': !editField }"
+                    [readonly]="!editField"
+                    type="{{ callData.element_type }}"
+                    placeholder="New {{ callData.element_placeholder }}"
+                    autocomplete="off"
+                    value="{{ callData.element_value }}"
+                    id="{{ callDataIndex }}"
+                    formControlName="{{ callData.element_placeholder }}"
+                  />
+                </mat-form-field>
+              </div>
+            </ng-container>
+            <ng-container *ngSwitchDefault>
+              <mat-form-field appearance="standard">
+                <mat-label>{{ callData.element_placeholder }}</mat-label>
+                <input
+                  matInput
+                  class="input-neumorphism"
+                  [ngClass]="{ 'input-disabled-neumorphism ': !editField }"
+                  [readonly]="!editField"
+                  type="{{ callData.element_type }}"
+                  placeholder="New {{ callData.element_placeholder }}"
+                  autocomplete="off"
+                  value="{{ callData.element_value }}"
+                  id="{{ callDataIndex }}"
+                  formControlName="{{ callData.element_placeholder }}"
+                />
+              </mat-form-field>
+            </ng-container>
+          </ng-container>
+          <button
+            class="iconbutton-neumorphism btnEditLayout"
+            matTooltip="Remove {{ callData.element.element_placeholder }}"
+            matTooltipPosition="above"
+            (click)="editLayout(callDataIndex)"
+            *ngIf="tglEditLayout"
+          >
+            <i class="bi bi-trash-fill"></i>
+          </button>
+        </div>
+      </div>
+     
 
-      <ng-template #textareaElement>
-        <textarea class="input-neumorphism" [ngClass]="{ 'input-disabled-neumorphism': !editField }" [readonly]="!editField" placeholder="{{ element.element_placeholder }}" [attr.read-only]="!editField" autocomplete="off" value="{{ element.element_value }} " 
-          appTextareaAutoresize></textarea>
-      </ng-template>
 
-    </div>
+     
+  </div>
+  <div *ngIf="editField">
+    <div class="form-row width-100">
+      <div class="col-md-4">
+
+        <mat-form-field appearance="standard">
+          <mat-label>Street</mat-label>
+          <input
+            matInput
+            class="input-neumorphism"
+            [ngClass]="{ 'input-disabled-neumorphism ': !editField }"
+            [readonly]="!editField"
+            type="text"
+            placeholder="New Street"
+            autocomplete="off"
+            id="street"
+          />
+        </mat-form-field>
+      </div>
+
+        <div class="col-md-4">
+
+        <mat-form-field appearance="standard">
+          <mat-label>City</mat-label>
+          <input
+            matInput
+            class="input-neumorphism"
+            [ngClass]="{ 'input-disabled-neumorphism ': !editField }"
+            [readonly]="!editField"
+            type="text"
+            placeholder="New City"
+            autocomplete="off"
+            id="city"
+          />
+        </mat-form-field>
+      </div>
+      <div class="col-md-4">
+
+        <mat-form-field appearance="standard">
+          <mat-label>Apt/Unit</mat-label>
+          <input
+            matInput
+            class="input-neumorphism"
+            [ngClass]="{ 'input-disabled-neumorphism ': !editField }"
+            [readonly]="!editField"
+            type="text"
+            placeholder="New apt"
+            autocomplete="off"
+            id="apt"
+          />
+        </mat-form-field>
+      </div>
 
   </div>
+
+<div class="form-row width-100">
+  <div class="col-md-4">
+
+        <mat-form-field appearance="fill">
+          <mat-label>State</mat-label>
+          <mat-select>
+            <mat-option selected hidden></mat-option>
+            <mat-option> FL </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div class="col-md-4">
+
+      <mat-form-field appearance="standard">
+        <mat-label>Zip code</mat-label>
+        <input
+          matInput
+          class="input-neumorphism"
+          [ngClass]="{ 'input-disabled-neumorphism ': !editField }"
+          [readonly]="!editField"
+          type="number"
+          placeholder="New zip code"
+          autocomplete="off"
+          id="zipCode"
+        />
+      </mat-form-field>
+    </div>
+    <div class="col-md-4">
+
+      <mat-form-field appearance="fill">
+        <mat-label>Country</mat-label>
+        <mat-select>
+          <mat-option selected hidden></mat-option>
+          <mat-option> USA </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+  </div>
+
+    </div>
 </form>
+</div>
