--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -16,10 +16,6 @@
   margin-top: 2.5rem;
 }
 
-.my-navbar-header:hover {
-  animation: 3s rotate linear infinite;
-}
-
 .my-navbar-logo {
   width: 3.5rem;
   height: 3.5rem;
@@ -63,4 +59,51 @@
 .i-my-navbar {
   color: #31344b;
   font-size: 1.5rem;
+}
+
+.txt-my-navbar{
+  font-size: 0.77rem !important;
+  overflow-wrap: break-word;
+}
+
+.dropdown-content{
+  min-width: 1rem !important;
+  top: 3.9rem !important;
+  left: 1.31rem !important;
+  box-shadow: none !important;
+  font-size: 0.55rem;
+  width: 4rem !important;
+}
+
+.dropdown-content :first-child{
+  background-color: transparent !important;
+  box-shadow: none !important;
+}
+
+.dropdown-content :last-child{
+  border-radius: 50% !important;
+}
+
+.dropdown:hover .dropdown-content{
+  border: .0625rem solid #cfcfd6;
+padding-top: .55rem;
+padding-bottom: .55rem;
+
+}
+
+.dropdown-content  .my-navbar-tab{
+  margin: 0;
+  margin-left: .55rem;
+  margin-right: .55rem;
+}
+
+.dropdown-content  .my-navbar-tab:hover{
+  background-color: #e6e7ee;
+  border: .0625rem solid #d1d9e6;
+  transition: all .2s ease-in-out;
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff !important;
+}
+
+.dropdown {
+  max-width: 7rem;
 }
