--- a/src/app/partials/call-information/call-information.component.html
+++ b/src/app/partials/call-information/call-information.component.html
@@ -1,6 +1,6 @@
 <div class="row main-row">
-  <div class="col-sm-8 ">
-    <h1>Caller information</h1>
+  <div class="col-lg-8 ">
+    <h1>Call information</h1>
     <hr><br>
     <div class="form-col">
       <form-component></form-component>
@@ -11,7 +11,7 @@
       </div>
     </div>
   </div>
-  <div class="col-sm-4">
+  <div class="col-lg-4">
     <div class="phone-col">
       <phone-component></phone-component>
     </div>
